--- a/index.html
+++ b/index.html
@@ -5,6 +5,34 @@
 	<link type="text/css" rel="stylesheet" charset="UTF-8" href="css/word-scord-game.css">
 	<title>Word Score Game</title>
 </head>
+<style type="text/css">
+	.score{
+		padding-left: 10px;font-size: 12px;
+	}
+	#mask{
+		position: absolute;
+		left:0;top:0;
+		bottom:0;right:0;
+		background-color: rgba(0, 0, 0, 0.55);
+		display: none;
+	}
+	.over{
+		position: absolute;
+		left:50%;
+		top:50%;
+		color:#fff;
+		font-weight: bold;
+		font-size: 18px;
+		text-align: center;
+		cursor: pointer;
+		-webkit-transform: translate(-50%, -50%);
+		   -moz-transform: translate(-50%, -50%);
+		    -ms-transform: translate(-50%, -50%);
+		     -o-transform: translate(-50%, -50%);
+		        transform: translate(-50%, -50%);
+	}
+	#score{font-size: 30px;margin:0;}
+</style>
 <body>
 	<div id="layout">
 	<header><h1>Word score game</h1></header>
@@ -38,6 +66,17 @@
 	</div>
 	<ul id="word-history-list">
 	</ul>
+
+	<div id="mask">
+		<div class="over">
+			<img class="over-img" src="img/congratulations.png" width="150" alt="" />
+			<br/>
+			<img class="over-img" src="img/congratulations2.png" height="30" alt="" />
+			<p id="score">99</p>
+			<!-- <div class="">游戏结束</div> -->
+			<div class="agin" onclick="history.go(0)">再来一局</div>
+		</div>
+	</div>
 
 	<script type="text/javascript" src="lib/jquery-3.2.1.js"></script>
 	<script type="text/javascript" src="lib/wordList.min.js"></script>
